fix(icon): specify vertical align
Prevents icon vertical align override when used with Bootstrap.

--- a/src/framework/theme/components/icon/_icon.component.theme.scss
+++ b/src/framework/theme/components/icon/_icon.component.theme.scss
@@ -12,6 +12,10 @@
     height: nb-theme(icon-height);
   }
 
+  nb-icon svg {
+    vertical-align: nb-theme(icon-svg-vertical-align);
+  }
+
   @each $status in nb-get-statuses() {
     nb-icon.status-#{$status} {
       color: nb-theme(icon-#{$status}-color);
