--- a/src/framework/theme/styles/themes/_mapping.scss
+++ b/src/framework/theme/styles/themes/_mapping.scss
@@ -1734,6 +1734,7 @@ $eva-mapping: (
   icon-line-height: 1,
   icon-width: 1em,
   icon-height: 1em,
+  icon-svg-vertical-align: top,
   icon-primary-color: color-primary-default,
   icon-info-color: color-info-default,
   icon-success-color: color-success-default,
